--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images//123.png" alt="Amsterdam Canal"></td>
+      <td><img src="132.png" alt="Amsterdam Canal"></td>
       <td>  <h1> Leandro Schvetz </h1>
         <p><em>Leader of Mumukim</em></p>
         <p>Leader of the Great Ancitent Wolves Pack: <em><strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p></td>
