--- a/index.html
+++ b/index.html
@@ -42,7 +42,100 @@
       <td>2017-2020</td>
       <td>Manager</td>
     </tr>
+  </table><!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Leandro's Personal Site</title>
+  <style>
+  body {
+    background-image: url('background.jpg');
+    background-blend-mode: soft-light;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+  }
+table.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+  </style>
+</head>
+
+<body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="circle-cropped.png" alt="Amsterdam Canal" width="250" height="250" ></td>
+      <td>  <h1> Leandro Schvetz </h1>
+        <p><em>Leader of Mumukim</em></p>
+        <p>Leader of the Great Ancitent Wolves Pack: <em><strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p></td>
+    </tr>
   </table>
+  <hr>
+  <h3><b>Education</b></h3>
+  <ul>
+    <li><b>Harta Academy Of MULAS</b></li>
+    <li><b>University of HARTABUNA</b></li>
+    <li><b>University FlitzaBaTahat</b></li>
+  </ul>
+<hr>
+  <h3><b>Work Experience</b></h3>
+  <table cellspacing="20px" class="center">
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+    </thead>
+    <tr>
+      <td><b>2012-2015:</b></td>
+      <td><b>IDF.</b></td>
+    </tr>
+    <tr>
+      <td><b>2015-2017:</b></td>
+      <td><b>Security.</b></td>
+    </tr>
+    <tr>
+      <td><b>2017-2020:</b></td>
+      <td><b>Manager.</b></td>
+    </tr>
+  </table>
+  <hr>
+  <h3>Skills</h3>
+  <table style="float: left", cellspacing="10px">
+    <tr>
+      <td><b>Python</b></td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td><b>Html</b></td>
+      <td>⭐⭐⭐</td>
+    </tr>
+  </table>
+  <table style="float: left", cellspacing="10px">
+    <tr>
+      <td><b>JS</b></td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td><b>Watch Tv Shows</b></td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+  </table>
+  <br>
+  <br>
+  <br>
+  <br>
+  <hr>
+  </tbody>
+  <b><a href="hobbies.html">My Hobbies</a></b>
+  <br>
+  <b><a href="contacts.html">Contact Me</a></b>
+</body>
+
+</html>
   <hr>
   <h3>Skills</h3>
   <table style="float: left", cellspacing="10px">
