--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ table.center {
     <li><b>University FlitzaBaTahat</b></li>
   </ul>
 <hr>
-  <h3><b>Work Experience</b></h3>
-  <table cellspacing="10px" class="center">
+  <h3 class='center'><b>Work Experience</b></h3>
+  <table cellspacing="20px" class="center">
     <thead>
       <tr>
         <th>Dates</th>
