--- a/index.html
+++ b/index.html
@@ -4,29 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>Leandro's Personal Site</title>
-  <style>
-  body {
-    background-image: url('background.jpg');
-    background-blend-mode: soft-light;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-
-  }
-table.center {
-  margin-left: auto;
-  margin-right: auto;
-}
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="circle-cropped.png" alt="Amsterdam Canal" width="250" height="250" ></td>
-      <td>  <h1> Leandro Schvetz </h1>
+      <td><img src="circle-cropped.png" alt="Amsterdam Canal" width="250" height="250"></td>
+      <td>
+        <h1> Leandro Schvetz </h1>
         <p><em>Leader of Mumukim</em></p>
-        <p>Leader of the Great Ancitent Wolves Pack: <em><strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p></td>
+        <p>Leader of the Great Ancitent Wolves Pack: <em><strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
+      </td>
     </tr>
   </table>
   <hr>
@@ -36,8 +25,8 @@ table.center {
     <li><b>University of HARTABUNA</b></li>
     <li><b>University FlitzaBaTahat</b></li>
   </ul>
-<hr>
-  <h3 class='center'><b>Work Experience</b></h3>
+  <hr>
+  <h3><b>Work Experience</b></h3>
   <table cellspacing="20px" class="center">
     <thead>
       <tr>
@@ -60,7 +49,7 @@ table.center {
   </table>
   <hr>
   <h3>Skills</h3>
-  <table style="float: left", cellspacing="10px">
+  <table style="float: left" , cellspacing="10px">
     <tr>
       <td><b>Python</b></td>
       <td>⭐⭐⭐⭐⭐</td>
@@ -70,7 +59,7 @@ table.center {
       <td>⭐⭐⭐</td>
     </tr>
   </table>
-  <table style="float: left", cellspacing="10px">
+  <table style="float: left" , cellspacing="10px">
     <tr>
       <td><b>JS</b></td>
       <td>⭐⭐⭐⭐⭐</td>
@@ -92,4 +81,3 @@ table.center {
 </body>
 
 </html>
- 
